--- a/dashboard/assets/navbar.css
+++ b/dashboard/assets/navbar.css
@@ -65,7 +65,17 @@ nav span span div {
   left: 0px;
   right: 0px;
   background: #222;
-  width: 210px;
+  width: 208px;
+  border-left: 1px solid #333;
+  border-bottom: 1px solid #333;
+  border-right: 1px solid #333;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  z-index: 5;
+}
+nav span span div a:last-child {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 nav span span div a:hover {
   background: #333;
