--- a/dashboard/assets/navbar.scss
+++ b/dashboard/assets/navbar.scss
@@ -78,9 +78,20 @@ nav {
                 left: 0px;
                 right: 0px;
                 background: #222;
-                width: 210px;
+                width: 208px;
+                border-left: 1px solid #333;
+                border-bottom: 1px solid #333;
+                border-right: 1px solid #333;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+                z-index: 5;
 
                 a {
+
+                    &:last-child {
+                        border-bottom-left-radius: 10px;
+                        border-bottom-right-radius: 10px;
+                    }
 
                     &:hover {
                         background: #333;
