--- a/dashboard/assets/navbar.css
+++ b/dashboard/assets/navbar.css
@@ -26,20 +26,12 @@ nav span span {
   position: relative;
   width: 210px;
 }
-nav span span.enabled button p[data-button=on] {
-  display: block;
+nav span span.enabled .icon {
+  transform: rotate(90deg);
 }
-nav span span.enabled button p[data-button=off] {
-  display: none;
-}
-nav span span:not(.enabled) button p[data-button=on] {
-  display: none;
-}
-nav span span:not(.enabled) button p[data-button=off] {
-  display: block;
-}
-nav span span:not(.enabled) div {
-  display: none;
+nav span span.enabled div {
+  opacity: 1;
+  pointer-events: all;
 }
 nav span span button {
   background: #333;
@@ -72,6 +64,9 @@ nav span span div {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   z-index: 5;
+  transition: opacity 50ms ease-in-out;
+  opacity: 0;
+  pointer-events: none;
 }
 nav span span div a:last-child {
   border-bottom-left-radius: 10px;
