--- a/dashboard/assets/navbar.scss
+++ b/dashboard/assets/navbar.scss
@@ -28,28 +28,15 @@ nav {
             position: relative;
             width: 210px;
 
-            &.enabled button {
-                p[data-button="on"] {
-                    display: block;
+            &.enabled {
+                .icon {
+                    transform: rotate(90deg);
                 }
-        
-                p[data-button="off"] {
-                    display: none;
+
+                div {
+                    opacity: 1;
+                    pointer-events: all;
                 }
-            }
-        
-            &:not(.enabled) button {
-                p[data-button="on"] {
-                    display: none;
-                }
-        
-                p[data-button="off"] {
-                    display: block;
-                }
-            }
-        
-            &:not(.enabled) div {
-                display: none;
             }
 
             button {
@@ -85,6 +72,9 @@ nav {
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
                 z-index: 5;
+                transition: opacity 50ms ease-in-out;
+                opacity: 0;
+                pointer-events: none;
 
                 a {
 
