--- a/dashboard/assets/login.scss
+++ b/dashboard/assets/login.scss
@@ -15,7 +15,7 @@
     p {
         margin: 5px 0px;
         text-align: center;
-        height: 24px;
+        min-height: 24px;
         color: #888;
     }
 
